--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,12 +13,21 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BrandedLaunch">
         <activity android:name=".ui.NewsActivity">
+
+        </activity>
+
+        <activity
+            android:name=".ui.SplashActivity"
+            android:theme="@style/Theme.BrandedLaunch">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
+
     </application>
 
 </manifest>
